--- a/main.css
+++ b/main.css
@@ -1,167 +1,124 @@
 :root {
-  --white : rgb(245, 245, 245);
+  --white: rgb(245, 245, 245);
   --orange: rgb(240, 145, 21);
 }
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: "Poppins", sans-serif;
-    color: var(--white);
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  color: var(--white);
+  scroll-behavior: smooth;
 }
 
 body {
-    background-color: rgb(32, 32, 32);
+  background-color: rgb(32, 32, 32);
 }
 
 main {
-    padding: 1em 0;
-    max-width: 1000px;
-    margin: 0 auto;
+  padding: 1em 0;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .bullet {
-    background-color: var(--white);
-    width: 5px;
-    position: absolute;
-    top: 5px;
-    bottom: 5px;
-    left: -5px;
-    margin-right: 20px;
-    border-radius: 10px;
-    background-color: var(--orange);
+  background-color: var(--white);
+  width: 5px;
+  position: absolute;
+  top: 5px;
+  bottom: 5px;
+  left: -5px;
+  margin-right: 20px;
+  border-radius: 10px;
+  background-color: var(--orange);
 }
 
 .title-con {
-    position: relative;
-    margin-left: 20px;
-    margin-top: 100px;
+  position: relative;
+  margin-left: 20px;
+  margin-top: 100px;
 }
 
 .title {
-    padding-left: 5px;
-    font-size: 1.3rem;
- 
+  padding-left: 5px;
+  font-size: 1.3rem;
 }
-
 
 .logo {
-    font-weight: bold;
-    letter-spacing: .9px;
+  font-weight: bold;
+  letter-spacing: 0.9px;
+  text-decoration: none;
+  transition: 0.5s ease;
 }
 
-.container {
-    padding: 0 1em;
-}
-
-.nav-links {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    gap: 20px;
-}
-
-.nav-links li {
-    text-decoration: none;
-    transition: all 0.50ms ease;
-}
-
-.nav-links li a {
-    text-decoration: none;
-}
-
-
-.nav-links li:hover a {
-    color: var(--orange);
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-}
-
-.max-view {
-    height: 100vh;
-    padding-top: 40px;
-}
-
-.about-me {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-
-}
-
-.about-me span{
+.logo:hover {
   color: var(--orange);
 }
 
-ul {
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
-    gap: 60px;
+.container {
+  padding: 0 1em;
+  width: 100%;
 }
 
-.image-grid {
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: 1fr;
-    row-gap: 50px;
+.nav-links {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  gap: 20px;
 }
 
-.image-container {
-    width: 100%;
-  
+.nav-links li {
+  text-decoration: none;
+  transition: all 0.5ms ease;
 }
 
-.image-container img {
-    object-fit: cover;
-    height: 200px;
-    width: 100%;
+.nav-links li a {
+  text-decoration: none;
 }
 
-ul li h1 {
-    margin-top: 10px;
+.nav-links li:hover a {
+  color: var(--orange);
 }
 
-
-.contact-title-container {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    margin-top: 100px;
+nav {
+  display: flex;
+  justify-content: space-between;
 }
 
-.contact-title-container h1 {
-    font-weight: normal;
-    font-size: 1em;
-    width: 100%;
-    display: flex;
-    flex-wrap: nowrap;
+.about-me {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
 
-.contact-title-container h1 span {
-    width: 100%;
-    padding-left: 40px;
-    color: var(--orange);
-    text-align: right;
+.about-me div span {
+  color: var(--orange);
+}
+
+.about-me div {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.about-me div img {
+  width: 100%;
+  object-fit: cover;
+  scale: 2;
 }
 
 @media screen and (min-width: 425px) {
-    .container {
-        padding: 0 2em;
-    }
+  .container {
+    padding: 0 2em;
+  }
 }
 
 @media screen and (min-width: 728px) {
-    .image-grid {
-        grid-template-columns: 1fr 1fr;
-        column-gap: 10px;
-    }
+  .image-grid {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+  }
 }
